--- a/.github/workflows/accessSQL_using_var.yml
+++ b/.github/workflows/accessSQL_using_var.yml
@@ -6,12 +6,12 @@ jobs:
   job-with-mysql-8_0:
     runs-on: ubuntu-20.04
     environment: dev
-    env:
-      MYSQL_ROOT_PASSWORD: root_password
-      MYSQL_DATABASE: foo
-      MYSQL_USER: user1
-      MYSQL_PASSWORD: user1_password
-      NEW_DATABASE: new_db
+    # env:
+    #   MYSQL_ROOT_PASSWORD: root_password
+    #   MYSQL_DATABASE: foo
+    #   MYSQL_USER: user1
+    #   MYSQL_PASSWORD: user1_password
+    #   NEW_DATABASE: new_db
     services:
       db:
         image: mysql:8.0
