--- a/.github/workflows/variable_use.yml
+++ b/.github/workflows/variable_use.yml
@@ -10,10 +10,10 @@ jobs:
         ports:
           - 3306:3306
         env:
-          MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
-          MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }}
-          MYSQL_USER: ${{ secrets.MYSQL_USER }}
-          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+          MYSQL_ROOT_PASSWORD: ${{ env.MYSQL_ROOT_PASSWORD }}
+          MYSQL_DATABASE: ${{ env.MYSQL_DATABASE }}
+          MYSQL_USER: ${{ env.MYSQL_USER }}
+          MYSQL_PASSWORD: ${{ env.MYSQL_PASSWORD }}
         options: >-
           --health-cmd "mysqladmin ping"
           --health-interval 10s
@@ -27,22 +27,22 @@ jobs:
         run: |
           echo "Waiting for MySQL to be ready"
           for i in {1..30}; do
-            mysqladmin --protocol=tcp -h localhost -P 3306 -u root -p${{ secrets.MYSQL_ROOT_PASSWORD }} ping &>/dev/null && break
+            mysqladmin --protocol=tcp -h localhost -P 3306 -u root -p${{ env.MYSQL_ROOT_PASSWORD }} ping &>/dev/null && break
             echo "MySQL is not ready yet... retrying in 2 seconds."
             sleep 2
           done
 
       - name: Create Database and Grant Full Permission to User1
         run: |
-          mysql --protocol=tcp -h localhost -P 3306 -u root -p${{ secrets.MYSQL_ROOT_PASSWORD }} -e "CREATE DATABASE IF NOT EXISTS ${{ secrets.NEW_DATABASE }};"
-          mysql --protocol=tcp -h localhost -P 3306 -u root -p${{ secrets.MYSQL_ROOT_PASSWORD }} -e "CREATE USER IF NOT EXISTS '${{ secrets.MYSQL_USER }}'@'%' IDENTIFIED BY '${{ secrets.MYSQL_PASSWORD }}';"
-          mysql --protocol=tcp -h localhost -P 3306 -u root -p${{ secrets.MYSQL_ROOT_PASSWORD }} -e "GRANT ALL PRIVILEGES ON ${{ secrets.NEW_DATABASE }}.* TO '${{ secrets.MYSQL_USER }}'@'%'; FLUSH PRIVILEGES;"
+          mysql --protocol=tcp -h localhost -P 3306 -u root -p${{ env.MYSQL_ROOT_PASSWORD }} -e "CREATE DATABASE IF NOT EXISTS ${{ env.NEW_DATABASE }};"
+          mysql --protocol=tcp -h localhost -P 3306 -u root -p${{ env.MYSQL_ROOT_PASSWORD }} -e "CREATE USER IF NOT EXISTS '${{ env.MYSQL_USER }}'@'%' IDENTIFIED BY '${{ env.MYSQL_PASSWORD }}';"
+          mysql --protocol=tcp -h localhost -P 3306 -u root -p${{ env.MYSQL_ROOT_PASSWORD }} -e "GRANT ALL PRIVILEGES ON ${{ env.NEW_DATABASE }}.* TO '${{ env.MYSQL_USER }}'@'%'; FLUSH PRIVILEGES;"
 
       - name: Create table and insert data
         run: |
-          mysql --protocol=tcp -h localhost -P 3306 -u ${{ secrets.MYSQL_USER }} -p${{ secrets.MYSQL_PASSWORD }} ${{ secrets.NEW_DATABASE }} -e "CREATE TABLE IF NOT EXISTS users (id INT AUTO_INCREMENT PRIMARY KEY, name VARCHAR(50));"
-          mysql --protocol=tcp -h localhost -P 3306 -u ${{ secrets.MYSQL_USER }} -p${{ secrets.MYSQL_PASSWORD }} ${{ secrets.NEW_DATABASE }} -e "INSERT INTO users (name) VALUES ('Alice'), ('Bob');"
+          mysql --protocol=tcp -h localhost -P 3306 -u ${{ env.MYSQL_USER }} -p${{ env.MYSQL_PASSWORD }} ${{ env.NEW_DATABASE }} -e "CREATE TABLE IF NOT EXISTS users (id INT AUTO_INCREMENT PRIMARY KEY, name VARCHAR(50));"
+          mysql --protocol=tcp -h localhost -P 3306 -u ${{ env.MYSQL_USER }} -p${{ env.MYSQL_PASSWORD }} ${{ env.NEW_DATABASE }} -e "INSERT INTO users (name) VALUES ('Alice'), ('Bob');"
 
       - name: Query data
         run: |
-          mysql --protocol=tcp -h localhost -P 3306 -u ${{ secrets.MYSQL_USER }} -p${{ secrets.MYSQL_PASSWORD }} ${{ secrets.NEW_DATABASE }} -e "SELECT * FROM users;"
+          mysql --protocol=tcp -h localhost -P 3306 -u ${{ env.MYSQL_USER }} -p${{ env.MYSQL_PASSWORD }} ${{ env.NEW_DATABASE }} -e "SELECT * FROM users;"
