--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -4,7 +4,7 @@ on:
 jobs:
   job-with-mysql-8_0:
     runs-on: ubuntu-20.04
-    environment: env  
+    environment: production  
     env:
       MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
       MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }}
