--- a/.github/workflows/variable_use.yml
+++ b/.github/workflows/variable_use.yml
@@ -4,17 +4,17 @@ on:
 jobs:
   job-with-mysql-8_0:
     runs-on: ubuntu-20.04
+    environment: dev
     services:
       db:
         image: mysql:8.0
         ports:
           - 3306:3306
-        environment: dev
         env:
-          MYSQL_ROOT_PASSWORD: ${{ env.MYSQL_ROOT_PASSWORD }}
-          MYSQL_DATABASE: ${{ env.MYSQL_DATABASE }}
-          MYSQL_USER: ${{ env.MYSQL_USER }}
-          MYSQL_PASSWORD: ${{ env.MYSQL_PASSWORD }}
+          MYSQL_ROOT_PASSWORD: ${{ vars.MYSQL_ROOT_PASSWORD }}
+          MYSQL_DATABASE: ${{ vars.MYSQL_DATABASE }}
+          MYSQL_USER: ${{ vars.MYSQL_USER }}
+          MYSQL_PASSWORD: ${{ vars.MYSQL_PASSWORD }}
         options: >-
           --health-cmd "mysqladmin ping"
           --health-interval 10s
@@ -23,27 +23,23 @@ jobs:
     steps:
       - name: Show Docker containers
         run: docker ps -a
-
       - name: Wait for MySQL to be ready
         run: |
           echo "Waiting for MySQL to be ready"
           for i in {1..30}; do
-            mysqladmin --protocol=tcp -h localhost -P 3306 -u root -p${{ env.MYSQL_ROOT_PASSWORD }} ping &>/dev/null && break
+            mysqladmin --protocol=tcp -h localhost -P 3306 -u root -p${{ vars.MYSQL_ROOT_PASSWORD }} ping &>/dev/null && break
             echo "MySQL is not ready yet... retrying in 2 seconds."
             sleep 2
           done
-
       - name: Create Database and Grant Full Permission to User1
         run: |
-          mysql --protocol=tcp -h localhost -P 3306 -u root -p${{ env.MYSQL_ROOT_PASSWORD }} -e "CREATE DATABASE IF NOT EXISTS ${{ env.NEW_DATABASE }};"
-          mysql --protocol=tcp -h localhost -P 3306 -u root -p${{ env.MYSQL_ROOT_PASSWORD }} -e "CREATE USER IF NOT EXISTS '${{ env.MYSQL_USER }}'@'%' IDENTIFIED BY '${{ env.MYSQL_PASSWORD }}';"
-          mysql --protocol=tcp -h localhost -P 3306 -u root -p${{ env.MYSQL_ROOT_PASSWORD }} -e "GRANT ALL PRIVILEGES ON ${{ env.NEW_DATABASE }}.* TO '${{ env.MYSQL_USER }}'@'%'; FLUSH PRIVILEGES;"
-
+          mysql --protocol=tcp -h localhost -P 3306 -u root -p${{ vars.MYSQL_ROOT_PASSWORD }} -e "CREATE DATABASE IF NOT EXISTS ${{ vars.NEW_DATABASE }};"
+          mysql --protocol=tcp -h localhost -P 3306 -u root -p${{ vars.MYSQL_ROOT_PASSWORD }} -e "CREATE USER IF NOT EXISTS '${{ vars.MYSQL_USER }}'@'%' IDENTIFIED BY '${{ vars.MYSQL_PASSWORD }}';"
+          mysql --protocol=tcp -h localhost -P 3306 -u root -p${{ vars.MYSQL_ROOT_PASSWORD }} -e "GRANT ALL PRIVILEGES ON ${{ vars.NEW_DATABASE }}.* TO '${{ vars.MYSQL_USER }}'@'%'; FLUSH PRIVILEGES;"
       - name: Create table and insert data
         run: |
-          mysql --protocol=tcp -h localhost -P 3306 -u ${{ env.MYSQL_USER }} -p${{ env.MYSQL_PASSWORD }} ${{ env.NEW_DATABASE }} -e "CREATE TABLE IF NOT EXISTS users (id INT AUTO_INCREMENT PRIMARY KEY, name VARCHAR(50));"
-          mysql --protocol=tcp -h localhost -P 3306 -u ${{ env.MYSQL_USER }} -p${{ env.MYSQL_PASSWORD }} ${{ env.NEW_DATABASE }} -e "INSERT INTO users (name) VALUES ('Alice'), ('Bob');"
-
+          mysql --protocol=tcp -h localhost -P 3306 -u ${{ vars.MYSQL_USER }} -p${{ vars.MYSQL_PASSWORD }} ${{ vars.NEW_DATABASE }} -e "CREATE TABLE IF NOT EXISTS users (id INT AUTO_INCREMENT PRIMARY KEY, name VARCHAR(50));"
+          mysql --protocol=tcp -h localhost -P 3306 -u ${{ vars.MYSQL_USER }} -p${{ vars.MYSQL_PASSWORD }} ${{ vars.NEW_DATABASE }} -e "INSERT INTO users (name) VALUES ('Alice'), ('Bob');"
       - name: Query data
         run: |
-          mysql --protocol=tcp -h localhost -P 3306 -u ${{ env.MYSQL_USER }} -p${{ env.MYSQL_PASSWORD }} ${{ env.NEW_DATABASE }} -e "SELECT * FROM users;"
+          mysql --protocol=tcp -h localhost -P 3306 -u ${{ vars.MYSQL_USER }} -p${{ vars.MYSQL_PASSWORD }} ${{ vars.NEW_DATABASE }} -e "SELECT * FROM users;"
